able to end width of text elements at the width their innerText ends avoiding overflow x in navigation

--- a/src/styles.css
+++ b/src/styles.css
@@ -114,7 +114,6 @@
 
 #n_a_v_i_g_a_t_i_o_n_takeActionLink{
     font-family:'Roboto',sans-serif;
-    width : 0px;
 }
 
 #n_a_v_i_g_a_t_i_o_n_takeActionCircle{
